# SwiftAlign

./: .gitignore  CITATION  LICENSE  README.md  install_binaries.py  pyproject.toml  requirements.txt  setup.py  test_swiftalign_run.py
docs/: parameters.md  usage.md
examples/: 68_S112.fna  run_example.sh
tests/: test_hybrid_msa.py  test_sequences.fasta
